# cv-model-serve

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  app.py  celery_app.py  docker-compose.yml  pyproject.toml  requirements.txt
.env/: .dev
api/: __init__.py  config.py
api/prediction/: preprocessing.py  tasks.py
api/resources/: index.py  predict.py
compose/local/flask/: Dockerfile  entrypoint  start
compose/local/flask/celery/flower/: start
compose/local/flask/celery/worker/: start
cv_model_serve/: __init__.py  config.py
cv_model_serve/image_classifier/: __init__.py  events.py  models.py  predict.py  preprocessing.py  tasks.py
tests/: test_cv_model_serve.py
